--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,14 +12,16 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.14",
     "@types/sequelize": "^4.28.20",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.0",
     "env-var": "^7.5.0",
     "express": "^5.1.0",
